@@ -35,6 +35,7 @@ import java.util.logging.Logger;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.CTabFolder;
 import org.eclipse.swt.custom.CTabItem;
+import org.eclipse.swt.custom.ScrolledComposite;
 import org.eclipse.swt.events.DisposeEvent;
 import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.HelpEvent;
@@ -63,6 +64,7 @@ public class GPSLoggerDialog extends DeviceDialog {
 	CTabFolder										tabFolder, subTabFolder1, subTabFolder2;
 	CTabItem											visualizationTabItem, configurationTabItem, uniLogTabItem, mLinkTabItem;
 	Composite											visualizationMainComposite, uniLogVisualization, mLinkVisualization;
+	ScrolledComposite							scrolledComposite;
 	Composite											configurationMainComposite;
 	GPSLoggerSetupConfiguration1	configuration1Composite;
 	GPSLoggerSetupConfiguration2	configuration2Composite;
@@ -170,7 +172,7 @@ public class GPSLoggerDialog extends DeviceDialog {
 							if (this.device.getChannelName(1).equals("UniLog")) {
 								//GPS-Logger
 								//GPS 		0=latitude 1=longitude 2=altitudeGPS 3=numSatelites 4=PDOP 5=HDOP 6=VDOP 7=velocity;
-								//SMGPS 	8=altitudeRel 9=climb 10=voltageRx 11=distanceTotal 12=distanceStart 13=directionStart 14=azimuth;
+								//SMGPS 	8=altitudeRel 9=climb 10=voltageRx 11=distanceTotal 12=distanceStart 13=directionStart 14=azimuth 15=GlideRatio 16=SpeedGlideRatio;
 								//CH1-UniLog
 								//Unilog 15=voltageUniLog 16=currentUniLog 17=powerUniLog 18=revolutionUniLog 19=voltageRxUniLog 20=heightUniLog 21=a1UniLog 22=a2UniLog 23=a3UniLog;
 								//M-LINK 24=valAdd00 25=valAdd01 26=valAdd02 27=valAdd03 28=valAdd04 29=valAdd05 30=valAdd06 31=valAdd07 32=valAdd08 33=valAdd09 34=valAdd10 35=valAdd11 36=valAdd12 37=valAdd13 38=valAdd14;
@@ -181,10 +183,10 @@ public class GPSLoggerDialog extends DeviceDialog {
 								//CH1-UniLog
 								//Unilog 26=voltage_UL 27=current_UL 28=power_UL 29=revolution_UL 30=voltageRx_UL 31=altitude_UL 32=a1_UL 33=a2_UL 34=a3_UL;
 								//M-LINK 35=valAdd00 36=valAdd01 37=valAdd02 38=valAdd03 39=valAdd04 40=valAdd05 41=valAdd06 42=valAdd07 43=valAdd08 44=valAdd09 45=valAdd10 46=valAdd11 47=valAdd12 48=valAdd13 49=valAdd14;
-								createVisualizationTabItem(1, this.device.getName().equals("GPS-Logger") ? 15 : 26, 9, 15);
+								createVisualizationTabItem(1, this.device.getName().equals("GPS-Logger") ? 17 : 26, 9, 15);
 							}
 							else {
-								createVisualizationTabItem(2, this.device.getName().equals("GPS-Logger") ? 15 : 20, 17, 15);
+								createVisualizationTabItem(2, this.device.getName().equals("GPS-Logger") ? 17 : 20, 17, 15);
 							}
 						}
 						if (this.device.getChannelCount() >= 2) {
@@ -201,7 +203,7 @@ public class GPSLoggerDialog extends DeviceDialog {
 							//CH2-UniLog2
 							//Unilog2 26=voltage_UL 27=current_UL2 28=capacity_UL2 29=power_UL2 30=energy_UL2 31=balance_UL 32=cellVoltage1 33=cellVolt2_ul 34=cellVolltage3_UL 35=cellVoltage4_UL 36=cellVoltage5_UL 37=cellVoltage6_UL 38=revolution_UL 39=a1_UL 40=a2_UL 41=a3_UL 42=temp_UL;
 							//M-LINK 43=valAdd00 44=valAdd01 45=valAdd02 46=valAdd03 47=valAdd04 48=valAdd05 49=valAdd06 50=valAdd07 51=valAdd08 52=valAdd09 53=valAdd10 54=valAdd11 55=valAdd12 56=valAdd13 57=valAdd14;
-							createVisualizationTabItem(2, this.device.getName().equals("GPS-Logger") ? 15 : 26, 17, 15);
+							createVisualizationTabItem(2, this.device.getName().equals("GPS-Logger") ? 17 : 26, 17, 15);
 						}
 					}
 					{
@@ -389,16 +391,21 @@ public class GPSLoggerDialog extends DeviceDialog {
 		this.visualizationTabItem.setFont(SWTResourceManager.getFont(GDE.WIDGET_FONT_NAME, GDE.WIDGET_FONT_SIZE, SWT.NORMAL));
 		this.visualizationTabItem.setText(Messages.getString(MessageIds.GDE_MSGT2009) + GDE.STRING_MESSAGE_CONCAT + this.device.getChannelNameReplacement(channelNumber));
 
-		this.visualizationMainComposite = new Composite(this.tabFolder, SWT.NONE);
-		FormLayout visualizationMainCompositeLayout = new FormLayout();
-		this.visualizationMainComposite.setLayout(visualizationMainCompositeLayout);
-		this.visualizationTabItem.setControl(this.visualizationMainComposite);
+		this.scrolledComposite = new ScrolledComposite(this.tabFolder, SWT.V_SCROLL);
+		this.visualizationMainComposite = new Composite(scrolledComposite, SWT.NONE);
+
+		this.visualizationTabItem.setControl(this.scrolledComposite);
+		this.visualizationMainComposite.setLayout(new FormLayout());
+		this.scrolledComposite.setContent(this.visualizationMainComposite);
+		this.scrolledComposite.setMinSize(500, 770);
+		this.scrolledComposite.setExpandHorizontal(true);
+		this.scrolledComposite.setExpandVertical(true);
 		{
 			FormData layoutData = new FormData();
 			layoutData.top = new FormAttachment(0, 1000, 0);
 			layoutData.left = new FormAttachment(0, 1000, 0);
 			layoutData.right = new FormAttachment(458, 1000, 0);
-			layoutData.bottom = new FormAttachment(1000, 1000, 0);
+			layoutData.height = 770;
 			new GPSLoggerVisualizationControl(this.visualizationMainComposite, layoutData, this, channelNumber, this.device, Messages.getString(MessageIds.GDE_MSGT2010), 0, numMeasurements);
 
 			this.subTabFolder1 = new CTabFolder(this.visualizationMainComposite, SWT.NONE);
