@@ -20,6 +20,7 @@ Device specific changes/fixes
 	* IGCAdapter - add missing unit in device XML
 	* GPS-Logger2/3 - additional measurements added with 1.26 (NMEA Import)
 	* GPS-Logger* - update configuration according 1.26
+	* GPS-Logger* - fix visualization dialog
 
 Version 3.4.8 - 24 Apr 2021
 Generic changes/fixes
